--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,19 +1,73 @@
-.container {
+.main {
   min-height: 100vh;
-  background-image: linear-gradient(to bottom left, #0f0f0f, #04003b, #400920, #210016);
+  display: flex;
+  justify-content: center;
+  background-image: linear-gradient(to bottom left, #0f0f0f, #04003b);
+}
+.container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 10rem;
+  position: relative;
+}
+
+.impressive-object {
+  height: 95vh;
+  width: 100vw;
+  background-image: linear-gradient(
+      to left,
+      hsla(270, 86%, 64%, 0.603),
+      hsla(244, 100%, 12%, 0.767)
+    ),
+    url("./images/bg.jpg");
+  background-size: cover;
+  background-position: top;
+  display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.projects-slide {
-  height: 60vh;
-  width: 50vw;
-  background-color: black;
+.heading-primary {
+  color: white;
+  text-transform: uppercase;
 }
 
-.title {
-  font-size: 6rem;
+.heading-primary-main {
+  display: block;
+  font-size: 3rem;
+  letter-spacing: 2rem;
+  font-weight: 400;
+}
+
+.heading-primary-sub {
+  display: block;
+  font-size: 2rem;
+  letter-spacing: 1rem;
+  font-weight: 200;
+}
+
+.navbar {
+  position: absolute;
+  left: 4rem;
+  top: 2rem;
+}
+
+.projects {
+  height: 100vh;
+  width: 50vw;
   color: white;
+  background-color: green;
+}
+
+.about-me {
+  height: 50vh;
+  width: 50vw;
+  background-color: red;
+}
+
+.contact {
+  height: 50vh;
+  width: 50vw;
+  background-color: purple;
 }
