--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -1,9 +1,9 @@
 .navbar {
-  width: 80vw;
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   color: white;
   font-size: 2rem;
-  margin: 3rem 3rem;
+  /* background-color: yellow; */
 }
