--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,18 +16,25 @@
   justify-content: center;
   background-image: linear-gradient(to bottom left, #cdf7f6, #10f9f5);
 }
+
 .container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   gap: 10rem;
-  position: relative;
+  /* position: relative; */
 }
 
 .heading-primary {
   color: var(--main-font-color);
   margin-top: 8rem;
   margin-bottom: 8rem;
+}
+
+.heading-primary--title {
+  margin-top: 5rem;
+  font-size: 4rem;
+  color: var(--main-font-color);
 }
 
 .heading-primary-main {
