--- a/client/src/Components/Navbar.css
+++ b/client/src/Components/Navbar.css
@@ -1,9 +1,20 @@
 .navbar {
   display: flex;
-  flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  color: white;
-  font-size: 2rem;
-  /* background-color: yellow; */
+  color: #d2d4d6;
+  font-size: 1.5rem;
+  background-color: #95989c;
+  border-radius: 2rem;
+}
+
+.item-nav {
+  /* display: inline-block; */
+  /* width: 10rem;
+  height: 2rem; */
+  padding: 1rem 2rem;
+}
+
+.item-nav:hover {
+  color: #fff;
 }
